--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,16 @@ img {
 .footer-btn:hover {
   color: #285d64; }
 
+.hero__content__heading {
+  font-family: "Catamaran", sans-serif;
+  color: #2a2a2a;
+  font-size: 8rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 3.268rem;
+  margin: 0 0 20px 0;
+  padding: 0; }
+
 .text-block__heading,
 .features__heading,
 .testimonials__heading,
@@ -203,7 +213,8 @@ img {
 
 .news__article__heading,
 .ask-a-question__form__input,
-.ask-a-question__form__input::-webkit-input-placeholder {
+.ask-a-question__form__input::-webkit-input-placeholder,
+.hero__content__copy {
   font-family: "Catamaran", sans-serif;
   color: #2a2a2a;
   opacity: 1;
@@ -214,7 +225,8 @@ img {
 
 .news__article__heading,
 .ask-a-question__form__input,
-.ask-a-question__form__input:-ms-input-placeholder {
+.ask-a-question__form__input:-ms-input-placeholder,
+.hero__content__copy {
   font-family: "Catamaran", sans-serif;
   color: #2a2a2a;
   opacity: 1;
@@ -225,7 +237,8 @@ img {
 
 .news__article__heading,
 .ask-a-question__form__input,
-.ask-a-question__form__input::-ms-input-placeholder {
+.ask-a-question__form__input::-ms-input-placeholder,
+.hero__content__copy {
   font-family: "Catamaran", sans-serif;
   color: #2a2a2a;
   opacity: 1;
@@ -236,7 +249,8 @@ img {
 
 .news__article__heading,
 .ask-a-question__form__input,
-.ask-a-question__form__input::placeholder {
+.ask-a-question__form__input::placeholder,
+.hero__content__copy {
   font-family: "Catamaran", sans-serif;
   color: #2a2a2a;
   opacity: 1;
@@ -323,10 +337,88 @@ a {
   justify-content: center;
   padding: 10px 50px; }
 
+header {
+  z-index: 10;
+  position: relative;
+  display: absolute; }
+
+header .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding-top: 30px; }
+
+.logo-heading {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 30%;
+  flex: 1 0 30%; }
+
+.header-nav {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 70%;
+  flex: 1 0 70%; }
+
+.header-nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style-type: none;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  text-transform: uppercase;
+  font-family: "Catamaran", sans-serif;
+  font-size: 2rem;
+  font-weight: 600; }
+
+.header-nav__list__item__link {
+  padding: 0 20px;
+  color: #2a2a2a; }
+
+.header-nav__list__item__link:hover {
+  color: #285d64; }
+
+.hero {
+  position: relative;
+  height: 100%;
+  top: 0; }
+
+.hero .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 100%; }
+
+.hero figure {
+  position: relative;
+  top: -120px; }
+
+.hero__content {
+  position: absolute;
+  text-align: left;
+  z-index: 50;
+  top: 26%;
+  padding: 0 30px 0 0; }
+
+.hero__content .btn {
+  margin: 15px 0 0 0; }
+
 .text-block {
   position: relative;
   text-align: center;
-  padding: 130px 0; }
+  padding: 10px 0 130px 0; }
 
 .text-block__copy {
   margin: 30px 0px 75px 0px;
