--- a/styles/style.scss
+++ b/styles/style.scss
@@ -51,6 +51,17 @@ img {
 
 // ====== GENERAL TYPOGRAPHY STYLES STARTS
 
+.hero__content__heading {
+  font-family: "Catamaran", sans-serif;
+  color: #2a2a2a;
+  font-size: 8rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 3.268rem;
+  margin:0 0 20px 0;
+  padding:0;
+}
+
 .text-block__heading,
 .features__heading,
 .testimonials__heading,
@@ -82,7 +93,8 @@ img {
 
 .news__article__heading,
 .ask-a-question__form__input,
-.ask-a-question__form__input::placeholder {
+.ask-a-question__form__input::placeholder,
+.hero__content__copy {
   font-family: "Catamaran", sans-serif;
   color: #2a2a2a;
   opacity: 1;
@@ -188,58 +200,79 @@ a {
 
 
 // ====== HEADER & NAV
-// header{
-//   z-index: 10;
-//   position:relative;
-// }
-// header .wrapper {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-// }
-// .logo-heading {
-//   flex: 1 0 30%;
-// }
-// .header-nav {
-//   flex: 1 0 70%;
-// }
-// .header-nav__list {
-//   display: flex;
-//   list-style-type: none;
-//   justify-content: flex-end;
-//   text-transform: uppercase;
-//   font-family: "Catamaran", sans-serif;
-//   font-size: 2rem;
-//   font-weight: 600;
-// }
-// .header-nav__list__item__link {
-//   padding: 0 20px;
-//   color: #2a2a2a;}
+header{
+  z-index: 10;
+  position:relative;
+  display:absolute;
+}
+header .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 30px;
+}
+.logo-heading {
+  flex: 1 0 30%;
+}
+.header-nav {
+  flex: 1 0 70%;
+}
+.header-nav__list {
+  display: flex;
+  list-style-type: none;
+  justify-content: flex-end;
+  text-transform: uppercase;
+  font-family: "Catamaran", sans-serif;
+  font-size: 2rem;
+  font-weight: 600;
+}
+.header-nav__list__item__link {
+  padding: 0 20px;
+  color: #2a2a2a;
+}
+
+.header-nav__list__item__link:hover {
+  color : #285d64;
+  }
 
 // ====== HEADER & NAV SECTION ENDS
 // ====== HERO SECTION STARTS {
-// .hero {
-//   position:absolute;
-//   height:100%;
-//   top: 0;
-// }
-// .hero .wrapper {
-//   display:flex;
-//   justify-content: flex-end;
-//   align-items:center;
-// }
-// .hero__content {
-//   position: absolute;
-//   height:100vh;
-//   text-align: right;
-//   align-self:center;
-// }
+.hero {
+  position:relative;
+  height:100%;
+  top: 0;
+}
+
+.hero .wrapper { 
+  display:flex;
+  justify-content: flex-end;
+  align-items: center;
+  height:100%;
+}
+
+.hero figure {
+  position: relative;
+  top: -120px;
+}
+
+.hero__content {
+  position: absolute;
+  text-align: left;
+  z-index: 50;
+  top: 26%;
+  padding: 0 30px 0 0;
+}
+
+  .hero__content .btn {
+  margin: 15px 0 0 0;
+  }
+
 // ====== HERO SECTION ENDS
 // ====== WELCOME SECTION STARTS
 .text-block {
   position: relative;
   text-align: center;
-  padding: 130px 0;
+  padding: 10px 0 130px 0;
 }
 
 .text-block__copy {
