--- a/styles/style.scss
+++ b/styles/style.scss
@@ -683,7 +683,8 @@ header .wrapper {
   text-align: center;
   padding: 0;
   display:flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .footer-nav__list__link a {
@@ -1251,6 +1252,11 @@ header .wrapper {
 
 .gallery__images figure:nth-child(4) {
   margin: 5px 0px 0px 5px;
+}
+
+.footer-nav_list {
+  flex-direction: column;
+  justify-content: center;
 }
 
 }
